system-ui (1.0.16~1) unstable; urgency=low

  * [UNRELEASED]

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 23 Jun 2011 14:22:19 +0300

system-ui (1.0.15-1) unstable; urgency=high

  * Fixes: NB#268139 - Unable to lock the device and time is not displayed in lock mode

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 23 Jun 2011 14:20:10 +0300

system-ui (1.0.14-1) unstable; urgency=low

  * Fixes: NB#265053 - The screen flickers when the touch screen lock transitions to the standby screen

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 22 Jun 2011 14:49:28 +0300

system-ui (1.0.13-1) unstable; urgency=high

  * Fixes: NB#265924 - Nasty white flicker when powering off the device
  * Fixes: NB#263307 - Button §qtn_tui_clear§ is clipped in notification toolbar in Russian Language

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 16 Jun 2011 12:56:54 +0300

system-ui (1.0.12-1) unstable; urgency=low

  * Fixes: NB#264744 - During device update (SSU) tens of empty notification banners with different icons are shown

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 13 Jun 2011 12:27:00 +0300

system-ui (1.0.11-1) unstable; urgency=low

  * Fixes: NB#264503 - [TASK] Call icon on status area in ongoing call state should be changed to white

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 10 Jun 2011 14:42:48 +0300

system-ui (1.0.10-1) unstable; urgency=low

  * Fixes: NB#264503 - [TASK] Call icon on status area in ongoing call state should be changed to white

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 10 Jun 2011 12:40:15 +0300

system-ui (1.0.9-1) unstable; urgency=low

  * Fixes: NB#260155 - LPM can be activated when lock screen is visible.

 -- Janne Sakko <ext-janne.2.sakko@nokia.com>  Wed, 08 Jun 2011 17:50:00 +0300

system-ui (1.0.8-1) unstable; urgency=low

  * Fixes: NB#255350 - [TASK] Ongoing call indication change for status bar

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Wed, 08 Jun 2011 15:16:06 +0300
