@@ -21,18 +21,13 @@
 #include <MNotification>
 #include "diskspacenotifier.h"
 
-DiskSpaceNotifier::DiskSpaceNotifier(QObject *parent) : QObject(parent),
-    notification(NULL)
+DiskSpaceNotifier::DiskSpaceNotifier(QObject *parent) : QObject(parent)
 {
     QDBusConnection::systemBus().connect(QString(), "/com/nokia/diskmonitor/signal", "com.nokia.diskmonitor.signal", "disk_space_change_ind", this, SLOT(handleDiskSpaceChange(QString, int)));
 }
 
 DiskSpaceNotifier::~DiskSpaceNotifier()
 {
-    if (notification != NULL) {
-        notification->remove();
-        delete notification;
-    }
 }
 
 void DiskSpaceNotifier::handleDiskSpaceChange(const QString &path, int percentage)
@@ -54,16 +49,10 @@ void DiskSpaceNotifier::handleDiskSpaceChange(const QString &path, int percentag
     }
 
     if (notificationShouldBeVisible) {
-        if (notification != NULL) {
-            // Destroy any previous notification
-            notification->remove();
-            delete notification;
-        }
-
         // Show a notification
         //% "Getting low with storage. Please check."
-        notification = new MNotification("x-nokia.system-memusage", "", qtTrId("qtn_memu_memlow_notification_src"));
-        notification->setAction(MRemoteAction("com.nokia.DuiControlPanel", "/", "com.nokia.DuiControlPanelIf", "appletPage", QList<QVariant>() << "Mass Storage Usage"));
-        notification->publish();
+        MNotification notification("x-nokia.system-memusage", "", qtTrId("qtn_memu_memlow_notification_src"));
+        notification.setAction(MRemoteAction("com.nokia.DuiControlPanel", "/", "com.nokia.DuiControlPanelIf", "appletPage", QList<QVariant>() << "Mass Storage Usage"));
+        notification.publish();
     }
 }
