@@ -40,29 +40,10 @@ bool QDBusConnection::connect(const QString &service, const QString &path, const
     return true;
 }
 
-int mNotificationsCreated = 0;
-MNotification::MNotification(const QString &, const QString &, const QString &)
-{
-    mNotificationsCreated++;
-}
-
-int mNotificationsDestroyed = 0;
-MNotification::~MNotification()
-{
-    mNotificationsDestroyed++;
-}
-
-void MNotification::setAction(const MRemoteAction &)
-{
-}
-
-bool MNotification::remove()
-{
-    return true;
-}
-
+int mNotificationsPublished = 0;
 bool MNotification::publish()
 {
+    mNotificationsPublished++;
     return true;
 }
 
@@ -88,8 +69,7 @@ void Ut_DiskSpaceNotifier::cleanup()
     qDBusConnectionConnectName.clear();
     qDBusConnectionConnectReceiver = NULL;
     qDBusConnectionConnectSlot.clear();
-    mNotificationsCreated = 0;
-    mNotificationsDestroyed = 0;
+    mNotificationsPublished = 0;
 }
 
 void Ut_DiskSpaceNotifier::testSystemBusConnection()
@@ -108,14 +88,13 @@ void Ut_DiskSpaceNotifier::testNotifications_data()
     QTest::addColumn<int>("diskSpaceChangePercentage1");
     QTest::addColumn<QString>("diskSpaceChangePath2");
     QTest::addColumn<int>("diskSpaceChangePercentage2");
-    QTest::addColumn<int>("notificationsCreated");
-    QTest::addColumn<int>("notificationsDestroyed");
+    QTest::addColumn<int>("notificationsPublished");
 
-    QTest::newRow("Disk space of / reached threshold but not 100%") << "/" << 90 << "/" << 99 << 1 << 0;
-    QTest::newRow("Disk space of / reached threshold and then 100%") << "/" << 90 << "/" << 100 << 2 << 1;
-    QTest::newRow("Disk space of / reached 100% twice") << "/" << 100 << "/" << 100 << 1 << 0;
-    QTest::newRow("Disk space of / and /home reached threshold") << "/" << 90 << "/home" << 90 << 2 << 1;
-    QTest::newRow("Disk space of /home and /home/user/MyDocs reached 100%") << "/home" << 100 << "/home/user/MyDocs" << 100 << 2 << 1;
+    QTest::newRow("Disk space of / reached threshold but not 100%") << "/" << 90 << "/" << 99 << 1;
+    QTest::newRow("Disk space of / reached threshold and then 100%") << "/" << 90 << "/" << 100 << 2;
+    QTest::newRow("Disk space of / reached 100% twice") << "/" << 100 << "/" << 100 << 1;
+    QTest::newRow("Disk space of / and /home reached threshold") << "/" << 90 << "/home" << 90 << 2;
+    QTest::newRow("Disk space of /home and /home/user/MyDocs reached 100%") << "/home" << 100 << "/home/user/MyDocs" << 100 << 2;
 }
 
 void Ut_DiskSpaceNotifier::testNotifications()
@@ -124,14 +103,12 @@ void Ut_DiskSpaceNotifier::testNotifications()
     QFETCH(int, diskSpaceChangePercentage1);
     QFETCH(QString, diskSpaceChangePath2);
     QFETCH(int, diskSpaceChangePercentage2);
-    QFETCH(int, notificationsCreated);
-    QFETCH(int, notificationsDestroyed);
+    QFETCH(int, notificationsPublished);
 
     m_subject->handleDiskSpaceChange(diskSpaceChangePath1, diskSpaceChangePercentage1);
     m_subject->handleDiskSpaceChange(diskSpaceChangePath2, diskSpaceChangePercentage2);
 
-    QCOMPARE(mNotificationsCreated, notificationsCreated);
-    QCOMPARE(mNotificationsDestroyed, notificationsDestroyed);
+    QCOMPARE(mNotificationsPublished, notificationsPublished);
 }
 
 void Ut_DiskSpaceNotifier::testDestruction()
@@ -140,8 +117,6 @@ void Ut_DiskSpaceNotifier::testDestruction()
 
     delete m_subject;
     m_subject = NULL;
-
-    QCOMPARE(mNotificationsDestroyed, mNotificationsCreated);
 }
 
 QTEST_APPLESS_MAIN(Ut_DiskSpaceNotifier)
