@@ -1,6 +1,7 @@
 system-ui (1.0.16~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#270432 - (Dis)connecting the USB cable or getting a battery notification may remove other notifications
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 23 Jun 2011 14:22:19 +0300
 
